[gd_scene load_steps=3 format=3 uid="uid://36q607a7npv5"]

[ext_resource type="Theme" uid="uid://bywqqu0lkvhdn" path="res://game/ui/ccm_theme.tres" id="1_h8m2y"]
[ext_resource type="Script" path="res://game/scripts/classic_scenario_details.gd" id="2_yjtce"]

[node name="LoveScenarioDetails" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_h8m2y")
script = ExtResource("2_yjtce")
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ScenarioNumber" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "00"
horizontal_alignment = 1

[node name="ScenarioName" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "SCENARIO NAME"
horizontal_alignment = 1

[node name="ScenarioSummary" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "SCENARIO SUMMARY
"
horizontal_alignment = 1

[node name="ScenarioCompletion" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "SCENARIO COMPLETION"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "START <3"
